# doc2dash

./: .coveragerc  .gitignore  .pipignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  dev-requirements.txt  doc2dash-session.tape  go.mod  go.sum  index_db.go  mkdocs.yml  noxfile.py  patcher.go  plist.go  plist_test.go  pyoxidizer-requirements.txt  pyoxidizer.bzl  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/workflows/: ci.yml  codeql-analysis.yml  main.yml  pin-for-pyoxidizer.yml  pyoxidizer.yml  pypi-package.yml  zizmor.yml
cmd/doc2dash/: main.go
doc2dash/: __init__.py  __main__.py  main.py
doc2dash/parsers/: __init__.py  base.py  doctype.py  helpers.py  intersphinx.py  pydoctor.py  sphinx.py  types.py  utils.py
doc2dash/parsers/pydoctor/: __init__.py  detector.py  parser.py
doc2dash/parsers/sphinx/: __init__.py  detector.py  parser.py
docs/: changelog.rst  conf.py  credits.md  doc2dash-session.tape  extending.md  formats.md  formats.rst  how-to.md  index.md  index.rst  installation.md  installation.rst  license.rst  make.bat  quickstart.md  submit.md  update-rtd-versions.py  usage.md  usage.rst  versions.json
docs/stylesheets/: extra.css
parsers/: doc_entries.go  errors.go  intersphinx.go
requirements/: docs.txt  pyoxidizer-darwin.txt  pyoxidizer-linux.txt  pyoxidizer-win32.txt  pyoxidizer.txt
src/doc2dash/: __init__.py  __main__.py  convert.py  docsets.py  output.py
src/doc2dash/parsers/: __init__.py  entry_types.py  intersphinx.py  intersphinx_inventory.py  patcher.py  pydoctor.py  sphinx.py  sphinx_inventory.py  types.py  utils.py
tests/: __init__.py  conftest.py  test_docsets.py  test_main.py  test_output.py
tests/parsers/: test_base.py  test_detectors.py  test_patcher.py  test_utils.py
tests/parsers/intersphinx/: function_example.html  objects.inv  pydoctor_example.html  test_intersphinx.py  test_inventory.py
tests/parsers/intersphinx/example-sphinx-docs/built_docs/html/: genindex.html  glossary.html  index.html  objects.inv  py-modindex.html  search.html
tests/parsers/intersphinx/example-sphinx-docs/source/: conf.py  glossary.rst  index.rst
tests/parsers/pydoctor/: function_example.html  pydoctor_example.html  test_pydoctor.py
tests/parsers/sphinx/: dd_example.html  function_example.html  sphinx_example.html  test_sphinx.py
