[tool:pytest]
addopts = -p no:doctest -ra
minversion = 3.0
strict = true
testpaths = tests
filterwarnings =
    once::Warning
    ignore:::babel[.*]
    ignore:::jinja2[.*]


[bdist_wheel]
# we're pure-python
universal = 1


[metadata]
# ensure LICENSE is included in wheels
license_file = LICENSE


[isort]
atomic=true
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
not_skip=__init__.py

known_first_party=doc2dash
known_third_party=attr,bs4,click,mock,pytest,setuptools,six,sphinx,zope
